@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        - add 'static_attribution' attribution to MakeMaker plugin
 
 5.040     2015-10-13 11:42:25-04:00 America/New_York
         - the distribution tarball name no longer includes -TRIAL if the
